<resources>
    <string name="app_name">Quiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="role_selection_header_question">Are you a…</string>
    <string name="student_header_text">Student</string>
    <string name="student_description_text">Join an existing quiz created by a teacher.</string>
    <string name="teacher_header_text">Teacher</string>
    <string name="teacher_description_text">Create your own quiz for students and interact with students.</string>
    <string name="continueBtn">Continue</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="join_with_code">Join quiz with code</string>
    <string name="redo_quizzes">Redo previous quizzes</string>
    <string name="sample_six_digit_code">123456</string>
    <string name="question_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua?</string>
    <string name="option_1_placeholder">Option 1</string>
    <string name="option_2_placeholder">Option 2</string>
    <string name="option_3_placeholder">Option 3</string>
    <string name="option_4_placeholder">Option 4</string>
    <string name="teacher_dashboard_header_text">My quizzes</string>
    <string name="teacher_dashboard_add_new_quiz_button">Create new quiz</string>
    <string name="create_new_quiz_header">Create new quiz</string>
    <string name="add_csv_button">Pick a CSV file</string>
    <string name="add_csv_hint">The fields of the CSV file must follow the format of \"question, answer1, answer2, answer3, answer4, correct_answer\". Do note that the \"correct_answer\" field is the numeric value of the correct answer (example: if the field is 1, then the correct answer is the first one).</string>
    <string name="or">or</string>
    <string name="create_manual_button">Create a quiz manually</string>
    <string name="quiz_created_header">Quiz created!</string>
    <string name="quiz_created_pre_code_text">The quiz can be accessed with the following code by the students:</string>
    <string name="share_quiz_button">Share quiz</string>
    <string name="back_button_my_quizzes">Back to My Quizzes</string>
    <string name="quiz_name_textbox_label">Quiz name</string>
    <string name="quiz_name_hint">Enter quiz name here</string>
    <string name="back_button_home_page">Back to Home Page</string>
    <string name="points_placeholder">100 points</string>
    <string name="your_result_header">Your result</string>
    <string name="two_digit_placeholder">10</string>
    <string name="accessibility_correct_icon_tag">Correct icon</string>
    <string name="accessibility_wrong_icon_tag">Wrong icon</string>
    <string name="add_questions_button">Add questions</string>
    <string name="finish_quiz_creation_button">Finish quiz creation</string>
    <string name="manual_edit_quiz_header">Editing quiz</string>
    <string name="question_placeholder_text">Question</string>
    <string name="answer_1_placeholder_text">Answer 1</string>
    <string name="answer_2_placeholder_text">Answer 2</string>
    <string name="answer_4_placeholder_text">Answer 4</string>
    <string name="answer_3_placeholder_text">Answer 3</string>
    <string name="quiz_name_placeholder">Quiz name</string>
    <string name="sample_six_alphanumeric_code">ABC123</string>
    <string name="start_quiz_header_begin_text">You are about to begin:</string>
    <string name="cancelBtn">Cancel</string>
    <string name="quiz_description_placeholder">Quiz description</string>
    <string name="point_indicator">%1$s points</string>
    <string name="wrong_answer_header_text">You\'re wrong!</string>
    <string name="correct_answer_placeholder">Correct answer placeholder</string>
    <string name="correct_answer_header_text">You\'re correct!</string>
    <string name="student_correct_answer_description_display">The correct answer is %1$s</string>
    <string name="add_point_text">10 points has been added.</string>
    <string name="profile_image_placeholder_text">Profile image</string>
    <string name="log_out">Log out</string>
    <string name="log_out_confirmation">Are you sure you want to log out? This cannot be undone!</string>
    <string name="redo_previous_quizzes_no_quiz_indicator_title">No quiz done</string>
    <string name="redo_previous_quizzes_no_quiz_indicator_description">Start doing quizzes by entering the code above so you can redo quizzes here.</string>
    <string name="initial_number_placeholder_value">0</string>
    <string name="correct_icon_content_description">Correct icon</string>
    <string name="wrong_icon_content_description">Wrong icon</string>
    <string name="points_content_description">Points</string>
    <string name="quiz_saved_successfully">Quiz saved successfully</string>
    <string name="quiz_history_description_result_page">Your quiz is saved to quiz history. If you want to redo the quiz, check the \"Redo Previous Quizzes\" section at the dashboard.</string>
    <string name="my_quizzes">My Quizzes</string>
    <string name="your_quizzes">Your quizzes</string>
</resources>