<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvQuizItem"
    android:layout_margin="12sp"
    app:cardCornerRadius="16sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/sample_six_digit_code"
            android:gravity="center"
            android:id="@+id/tvCode"
            android:textSize="24sp"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvQuizName"
                android:gravity="start"
                android:textSize="18sp"
                android:lines="1"
                android:text="@string/quiz_name_placeholder"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_points_circle"
                    app:tint="@color/material_dynamic_primary0"
                    android:contentDescription="@string/points_content_description" />
                <TextView
                    android:paddingHorizontal="8sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/tvPointsIndicator"
                    android:text="@string/initial_number_placeholder_value"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/correct_icon_content_description"
                    android:src="@drawable/ic_correct_circle"
                    app:tint="@color/material_dynamic_primary0" />
                <TextView
                    android:paddingHorizontal="8sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/tvCorrectIndicator"
                    android:text="@string/initial_number_placeholder_value"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/wrong_icon_content_description"
                    android:src="@drawable/ic_wrong_circle"
                    app:tint="@color/material_dynamic_primary0" />
                <TextView
                    android:paddingHorizontal="8sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/tvWrongIndicator"
                    android:text="@string/initial_number_placeholder_value"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>