<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".ui.teacher.add_quiz.manual.ManualAddQuizFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:paddingBottom="8sp"
        android:text="@string/manual_edit_quiz_header" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rvQuizQuestions"
        android:layout_weight="8"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <Button
            android:layout_marginHorizontal="35sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddMore"
            app:cornerRadius="8dp"
            android:text="@string/add_questions_button"/>
        <Button
            android:layout_marginHorizontal="35sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnFinish"
            app:cornerRadius="8dp"
            android:text="@string/finish_quiz_creation_button"/>
    </LinearLayout>

</LinearLayout>